try rbt in circleci

--- a/tests/robot_tests/Results/report.html
+++ b/tests/robot_tests/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,3206],[],[[5,0,1,0,[],[1,112,3094],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,47123],[[4,5,6,7,[],[1,19,15840],[],[[8,0,1,0,[9],[1,108,3637],[]],[10,0,1,0,[9],[1,3746,4169],[]],[11,0,1,0,[9],[1,7917,2558],[]],[12,0,1,0,[9],[1,10475,2660],[]],[13,0,1,0,[9],[1,13136,2722],[]]],[],[5,5,5,5]],[14,15,16,7,[],[1,15862,5649],[],[[17,0,1,0,[18],[1,15879,2990],[]],[19,0,1,0,[18],[1,18870,2640],[]]],[],[2,2,2,2]],[20,21,22,7,[],[1,21513,21421],[],[[23,0,1,0,[],[1,21533,2963],[]],[24,0,1,0,[],[1,24496,6143],[]],[25,0,1,0,[],[1,30639,3033],[]],[26,0,1,0,[],[1,33672,5849],[]],[27,0,1,0,[],[1,39522,3409],[]]],[],[5,5,5,5]],[28,29,30,7,[],[1,42939,4173],[],[[31,0,1,0,[],[1,42954,4157],[]]],[],[1,1,1,1]]],[],[],[13,13,13,13]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*04 Blog","*/home/local/luoyumo/Desktop/microblog_backend/tests/robot_tests/Tests/04_Blog.robot","*../Tests/04_Blog.robot","*<p>Test register\x3c/p>","*Can add a new blog"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/local/luoyumo/Desktop/microblog_backend/tests/robot_tests/Tests","*../Tests","*01 Register","*/home/local/luoyumo/Desktop/microblog_backend/tests/robot_tests/Tests/01_Register.robot","*../Tests/01_Register.robot","*<p>Test register\x3c/p>","*New user should be able to register with valid data","*Register","*Error should exist when register with existing username","*Error should exist when register with invalid username","*Error should exist when register with invalid password","*Error should exist when password and its confirmation are different","*02 Login","*/home/local/luoyumo/Desktop/microblog_backend/tests/robot_tests/Tests/02_Login.robot","*../Tests/02_Login.robot","*User should be able to login with correct credentials","*Login","*User should not be able to login with wrong credentials","*03 Setting","*/home/local/luoyumo/Desktop/microblog_backend/tests/robot_tests/Tests/03_Setting.robot","*../Tests/03_Setting.robot","*Can logout","*Can change username","*Show error message if new username is already used by another user","*Can change password","*Show error message when old password is wrong","*04 Blog","*/home/local/luoyumo/Desktop/microblog_backend/tests/robot_tests/Tests/04_Blog.robot","*../Tests/04_Blog.robot","*Can add a new blog"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"04 Blog","name":"04 Blog","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:47","fail":0,"label":"Critical Tests","pass":13},{"elapsed":"00:00:47","fail":0,"label":"All Tests","pass":13}],[{"elapsed":"00:00:06","fail":0,"label":"Login","pass":2},{"elapsed":"00:00:16","fail":0,"label":"Register","pass":5}],[{"elapsed":"00:00:47","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":13},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"Tests.01 Register","name":"01 Register","pass":5},{"elapsed":"00:00:06","fail":0,"id":"s1-s2","label":"Tests.02 Login","name":"02 Login","pass":2},{"elapsed":"00:00:21","fail":0,"id":"s1-s3","label":"Tests.03 Setting","name":"03 Setting","pass":5},{"elapsed":"00:00:04","fail":0,"id":"s1-s4","label":"Tests.04 Blog","name":"04 Blog","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1582364522646;
+window.output["baseMillis"] = 1582548630861;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3224;
+window.output["generated"] = 47222;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
